[package]
name = "klefki"
version = "0.1.0"
authors = ["Raytlty <alexmao930918@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rug]
version = "1.6.0"
default-features = false
features = ["integer", "float", "rand", "complex"]

[dependencies]
lazy_static = "1.4.0"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/katex.html"
]
